# swarm_bots

./: README.md  build.sh
src/dna_swarm_bot/: CMakeLists.txt  README.md  package.xml
src/dna_swarm_bot/arduino/motor_controller/: motor_controller.ino
src/dna_swarm_bot/config/: params.yaml  view_bot.rviz
src/dna_swarm_bot/description/: camera.xacro  gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
src/dna_swarm_bot/description/materials/scripts/: aruco.material
src/dna_swarm_bot/dna_swarm_bot/: arduino_bridge.py  imu_odometry.py  marker_detector.py  overtake_trigger.py  sim_detector.py  swarm_coordinator.py
src/dna_swarm_bot/launch/: camera.launch.py  launch_robot.launch.py  launch_sim.launch.py  teleop.launch.py
src/dna_swarm_bot/models/wall_marker_10/: model.config  model.sdf
src/dna_swarm_bot/models/wall_marker_10/materials/scripts/: marker.material
src/dna_swarm_bot/models/wall_marker_11/: model.config  model.sdf
src/dna_swarm_bot/models/wall_marker_11/materials/scripts/: marker.material
src/dna_swarm_bot/models/wall_marker_12/: model.config  model.sdf
src/dna_swarm_bot/models/wall_marker_12/materials/scripts/: marker.material
src/dna_swarm_bot/scripts/: generate_markers.py  jetson_setup.sh
src/dna_swarm_bot/worlds/: swarm_world.sdf
